Give banner white background to prevent grey borders on mobile.

--- a/CollAction/Frontend/app/project/styles/ProjectDetails.scss
+++ b/CollAction/Frontend/app/project/styles/ProjectDetails.scss
@@ -28,7 +28,7 @@
     }
 
     #project-background {
-        background-color: #d8d8d8;
+        background-color: #fff;
         height: 450px;
     }
 
